add_executable(fcl_example_app_lifecycle application_lifecycle.cpp)
target_link_libraries(fcl_example_app_lifecycle PRIVATE fcl)
add_test(NAME test_fcl_example_app_lifecycle COMMAND fcl_example_app_lifecycle WORKING_DIRECTORY ${CMAKE_BINARY_DIR})

add_executable(fcl_example_app_builder application_builder.cpp)
target_link_libraries(fcl_example_app_builder PRIVATE fcl)
add_test(NAME test_fcl_example_app_builder COMMAND fcl_example_app_builder WORKING_DIRECTORY ${CMAKE_BINARY_DIR})

add_executable(fcl_example_app_daemon_runner daemon_runner.cpp)
target_link_libraries(fcl_example_app_daemon_runner PRIVATE fcl)
add_test(NAME test_fcl_example_app_daemon_runner COMMAND fcl_example_app_daemon_runner WORKING_DIRECTORY ${CMAKE_BINARY_DIR})

add_executable(fcl_example_exception_logging exception_logging.cpp)
target_link_libraries(fcl_example_exception_logging PRIVATE fcl)
add_test(NAME test_fcl_example_exception_logging COMMAND fcl_example_exception_logging WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
